# goodstats

./: .gitignore  README.md  aenv.sh  denv.sh  dev.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
.ignore/: __test_ttest__.py
src/: __init__.py  _model.py  _prob.py  _test.py  _utils.py  model.py  test.py
src/blairstats/: _model.py  _model_ols.py  _test.py  _test_ttest.py  _utils.py  model.py  test.py
src/goodstats/: __init__.py  __model__.py  __model_curvefit__.py  __model_ols__.py  __utils__.py  _model.py  _model_curvefit.py  _model_ols.py  _model_wls.py  _test_ttest.py  _utils.py  reg.py
